# ohpc

./: CMakeLists.txt
inc/: Equation.h  Shuntingyard.h  adder.h  element.h  frac.h  myexceptions.h  num.h  ohpc.h  operators.h  tvec.h  types.h
src/: Equation.cpp  Shuntingyard.cpp  adder.cpp  frac.cpp  main.cpp  num.cpp  ohpc.cpp  operators.cpp  tvec.cpp
